tests/diagnostics/file_roles/public_declarations/function_in_binary/expect.txt
# exit: 1
input/main.bin.coppice:5:8: error: public declarations are not allowed in .bin.coppice files
  public function helper() -> nil {
         ^
